# ChirpZ-FPGA

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  test.c
api/: CMakeLists.txt
api/include/fftfpga/: fftfpga.h
api/src/: chirp1d.c  chirp2d.c  chirp2d_v2.c  chirp3d.c  chirp3d_v2.c  fftfpga.c  fpga_state.h  misc.c  misc.h  opencl_utils.c
cmake/: extDep.cmake  genKernelTargets.cmake
kernels/: CMakeLists.txt
kernels/chirp1d/: CMakeLists.txt  chirp1d.cl
kernels/chirp2d/: CMakeLists.txt  chirp2d_bram.cl  chirp2d_bram_v2.cl  chirp2d_ddr.cl
kernels/chirp3d/: CMakeLists.txt  chirp3d.cl
kernels/common/: fft_config.h.in
kernels/matrixTranspose/: diagonal_bitrev.cl
scripts/python/: Chirpz-Py.ipynb
src/: CMakeLists.txt  chirpz.cpp  chirpz.hpp  chirpz1d.cpp  chirpz2d.cpp  chirpz3d.cpp  chirpz_1d.cpp  chirpz_2d.cpp  helper.cpp  helper.hpp  main.cpp
src/include/: config.h.in
tests/: CMakeLists.txt  test_chirpz.cpp  test_chirpz2d_cpu.cpp  test_chirpz3d_cpu.cpp
